deploy/ingress.yaml
# SPDX-FileCopyrightText: © 2026 Clifford Weinmann <https://www.cliffordweinmann.com/>
# SPDX-License-Identifier: MIT-0
#
# Kubernetes Ingress

---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "nginx-demo"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "nginx-demo.example.net"
      http:
        paths:
          - backend:
              service:
                name: "nginx-demo"
                port:
                  name: "http"
            path: "/"
            pathType: "Prefix"
